ROTM-18 partial implmentation of passport enquiries journey

--- a/apps/passport-in-progress/translations/src/en/fields.json
+++ b/apps/passport-in-progress/translations/src/en/fields.json
@@ -31,7 +31,18 @@
         "label": "My passport application"
       },
       "someone": {
-        "label": "Someone elses passport application"
+        "label": "Someone else's passport application"
+      }
+    }
+  },
+  "application-reference-number": {
+    "label": "This can be found in the top left on the first page of the application form"
+  },
+  "application-reference-radio": {
+    "legend": " ",
+    "options": {
+      "ref-not-known": {
+        "label": "I don't know the reference number"
       }
     }
   }
