--- a/apps/passport-in-progress/translations/src/en/pages.json
+++ b/apps/passport-in-progress/translations/src/en/pages.json
@@ -1,5 +1,10 @@
 {
   "apply-online": {
     "header": "We need to ask you a few questions to find the application."
+  },
+  "application-reference": {
+    "header": "What is application reference number?"
   }
+
+
 }
