ROTM-18 partial implmentation of passport enquiries journey

--- a/apps/passport-in-progress/translations/src/en/fields.json
+++ b/apps/passport-in-progress/translations/src/en/fields.json
@@ -45,5 +45,16 @@
         "label": "I don't know the reference number"
       }
     }
+  },
+  "application-within-uk-radio": {
+    "legend": "Did you make your application from within the UK?",
+    "options": {
+      "yes": {
+        "label": "Yes"
+      },
+      "no": {
+        "label": "No"
+      }
+    }
   }
 }
