ROTM-18 partial implmentation of passport enquiries journey

--- a/apps/passport-in-progress/translations/src/en/fields.json
+++ b/apps/passport-in-progress/translations/src/en/fields.json
@@ -56,5 +56,8 @@
         "label": "No"
       }
     }
+  },
+  "full-name-text":{
+    "label": "This must be the same as on the application form"
   }
 }
