--- a/apps/passport-in-progress/translations/src/en/pages.json
+++ b/apps/passport-in-progress/translations/src/en/pages.json
@@ -4,6 +4,9 @@
   },
   "application-reference": {
     "header": "What is application reference number?"
+  },
+  "full-name": {
+    "header": "What's the applicant's full name?"
   }
 
 
