ROTM-18 partial implmentation of passport enquiries journey

--- a/apps/passport-in-progress/translations/src/en/fields.json
+++ b/apps/passport-in-progress/translations/src/en/fields.json
@@ -57,7 +57,7 @@
       }
     }
   },
-  "full-name-text":{
+  "applicant-full-name-text":{
     "label": "This must be the same as on the application form"
   }
 }
