--- a/apps/passport-in-progress/translations/src/en/pages.json
+++ b/apps/passport-in-progress/translations/src/en/pages.json
@@ -5,7 +5,7 @@
   "application-reference": {
     "header": "What is application reference number?"
   },
-  "full-name": {
+  "applicant-full-name": {
     "header": "What's the applicant's full name?"
   }
 
