ROTM-18 partial implmentation of passport enquiries journey

--- a/apps/passport-in-progress/translations/src/en/fields.json
+++ b/apps/passport-in-progress/translations/src/en/fields.json
@@ -59,5 +59,11 @@
   },
   "applicant-full-name-text":{
     "label": "This must be the same as on the application form"
+  },
+  "full-name-text":{
+    "label": "This must be the same as on the application form"
+  },
+  "email-address-text":{
+    "label": "This must be the same as on the application form"
   }
 }
