ROTM-18 partial implmentation of passport enquiries journey

--- a/apps/common/translations/src/en/buttons.json
+++ b/apps/common/translations/src/en/buttons.json
@@ -3,5 +3,6 @@
   "send": "Send",
   "change": "Change",
   "close": "Close",
-  "sendComplaint": "Send complaint"
+  "sendComplaint": "Send complaint",
+  "submitEnquiry": "Submit enquiry"
 }
